# mini-claude-code

./: .env.example  .gitignore  CLIENT_README_zh.md  README.md  README_zh.md  VERSION_HISTORY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  claude-gap-analysis-0.90.md  coding_reliability_loop.md  core_runtime_architecture.md  evidence_first_runtime.md  interview_summary.md  production-readiness-zh.md  runtime-modularization-change.md  subagent-2.0-roadmap-zh.md
examples/hooks/: settings.json
examples/mcp/: mcp-registry.example.json
examples/parallel_writer/: README.md
examples/permission_policy/: settings.json
examples/subagents/: subagents.json
frontend/: app.js  index.html  styles.css
mini_cc/: __init__.py  agent.py  bench.py  cli.py  coding_loop.py  config.py  context.py  desktop_app.py  desktop_launcher.py  evidence.py  governance.py  hooks.py  llm.py  mcp.py  mcp_live.py  memory.py  permission.py  permission_ledger.py  project_index.py  repair.py  reporting.py  runtime_types.py  s20.py  session.py  subagents.py  task_planner.py  task_runtime.py  task_state.py  task_success.py  tool_eval.py  tool_recovery.py  tool_runtime.py  tools.py  verification.py  verification_policy.py  web_server.py  workflow.py
mini_cc/evals/: __init__.py  real_usability.py  realistic_tasks.py  task_success.py
s20_comprehensive/: README.md  code.py
scripts/: health_check.ps1  mcp_hook_live_validation.ps1  mock_demo.ps1  runtime_report.ps1  start_desktop.bat  start_desktop.ps1  start_frontend.ps1  terminal_bench_smoke.ps1  tool_use_eval.ps1
tests/: test_agent_mock.py  test_agent_task_state.py  test_bench_runner.py  test_cli.py  test_coding_loop.py  test_config.py  test_context.py  test_docs_positioning.py  test_governance.py  test_mcp.py  test_mcp_live.py  test_openai_provider.py  test_project_index.py  test_realistic_evals.py  test_repair.py  test_runtime_architecture.py  test_runtime_modules.py  test_s20.py  test_subagents.py  test_task_planner.py  test_task_runtime.py  test_task_state_machine.py  test_task_success.py  test_task_success_eval.py  test_task_success_v2.py  test_tool_context_tools.py  test_tool_eval.py  test_tool_recovery.py  test_tool_runtime.py  test_tools.py  test_verification.py  test_verification_policy_strict.py  test_web_server.py  test_workflow.py
